--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,14 @@
     "target": "es2022",
     "module": "es2020",
     "lib": [
-      "es2018", 
+      "es2018",
       "dom"
     ],
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@assets/*": ["src/assets/*"],
+      "@environments/*": ["src/environments/*"],
+    },
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
