--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "univote-mobile-new",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "Tom Richard",
   "homepage": "https://xdevpusaka.com/",
   "scripts": {
@@ -31,6 +31,7 @@
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
+    "@zxing/ngx-scanner": "^17.0.1",
     "basic-ftp": "^5.0.5",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
